--- a/css/base.css
+++ b/css/base.css
@@ -18,3 +18,19 @@ a{
 a:hover{
 	color: #f60;
 }
+ol,
+ul{
+	margin: 0;/* 清除浏览器为自动添加的样式*/
+	padding: 0;/* 清除浏览器为自动添加的样式*/
+}
+li{
+	/* 修改列表项前的提示符号 */
+	/* list-style: disc; 圆饼 */
+	/* list-style: decimal;数字 */
+	/* list-style: circle;圆圈 */
+	/* list-style: lower-alpha;小写字母 */
+	/* list-style: upper-alpha;大写字母 */
+	/* list-style: upper-roman;大写罗马数字 */
+	/*list-style: none;取消*/
+	list-style: none;/*清除列表项前的提示符号*/
+}
